Test crash: assert(thread->held_monitor_count() == 0) failed: Must be

XMLWordPrintable

    • b09

      Test: serviceability/jvmti/GetOwnedMonitorInfo/GetOwnedMonitorInfoTest.java

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/a4a7850a-7c35-410a-b879-d77fbb2f6087-S71735/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/82c3b7ca-9d67-4828-bf40-930310eaf18a/runs/a432ffd2-9823-4fbc-9f1f-0b1c7aa68860/workspace/open/src/hotspot/share/runtime/continuationFreezeThaw.cpp:2449), pid=84140, tid=26371
      # assert(thread->held_monitor_count() == 0) failed: Must be
      #
      # JRE version: Java(TM) SE Runtime Environment (24.0+2) (fastdebug build 24-ea+2-97)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 24-ea+2-97, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-amd64)

      --------------- T H R E A D ---------------

      Current thread (0x00007fa644021c10): JavaThread "ForkJoinPool-1-worker-1" daemon [_thread_in_Java, id=26371, stack(0x000070000f7f8000,0x000070000f8f8000) (1024K)]

      Stack: [0x000070000f7f8000,0x000070000f8f8000], sp=0x000070000f8f6d60, free space=1019k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0x1255eff] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x59f (continuationFreezeThaw.cpp:2449)
      V [libjvm.dylib+0x12566b8] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x38
      V [libjvm.dylib+0x656cb4] report_vm_error(char const*, int, char const*, char const*, ...)+0xb4
      V [libjvm.dylib+0x625b36] Config<(oop_kind)0, G1BarrierSet>::thaw(JavaThread*, Continuation::thaw_kind)+0xb16
      V [libjvm.dylib+0x62336b] long* thaw<Config<(oop_kind)0, G1BarrierSet>>(JavaThread*, int)+0x4b
      v ~StubRoutines::Cont thaw return barrier 0x000000011b7f1657
      j jdk.internal.vm.Continuation.run()V+152 java.base@24-ea
      j java.lang.VirtualThread.runContinuation()V+72 java.base@24-ea
      j java.lang.VirtualThread$$Lambda+0x000000012704a6d0.run()V+4 java.base@24-ea
      j java.util.concurrent.ForkJoinTask$RunnableExecuteAction.compute()Ljava/lang/Void;+4 java.base@24-ea
      j java.util.concurrent.ForkJoinTask$RunnableExecuteAction.compute()Ljava/lang/Object;+1 java.base@24-ea
      j java.util.concurrent.ForkJoinTask$InterruptibleTask.exec()Z+51 java.base@24-ea
      j java.util.concurrent.ForkJoinTask.doExec()V+10 java.base@24-ea
      j java.util.concurrent.ForkJoinPool$WorkQueue.topLevelExec(Ljava/util/concurrent/ForkJoinTask;I)V+9 java.base@24-ea
      j java.util.concurrent.ForkJoinPool.runWorker(Ljava/util/concurrent/ForkJoinPool$WorkQueue;)V+366 java.base@24-ea
      j java.util.concurrent.ForkJoinWorkerThread.run()V+31 java.base@24-ea
      v ~StubRoutines::call_stub 0x000000011b7ebd01
      V [libjvm.dylib+0x972d1b] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x3bb
      V [libjvm.dylib+0x971a85] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, JavaThread*)+0x225
      V [libjvm.dylib+0x971c50] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, JavaThread*)+0x70
      V [libjvm.dylib+0xad2ecf] thread_entry(JavaThread*, JavaThread*)+0x11f
      V [libjvm.dylib+0x9a7cd5] JavaThread::thread_main_inner()+0x1a5
      V [libjvm.dylib+0x119a7cc] Thread::call_run()+0xbc
      V [libjvm.dylib+0xefc182] thread_native_entry(Thread*)+0x122
      C [libsystem_pthread.dylib+0x6202] _pthread_start+0x63
      C [libsystem_pthread.dylib+0x1bab] thread_start+0xf
      Lock stack of current Java thread (top to bottom):

            Assignee:
            Serguei Spitsyn
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: