8334085: Test crash: assert(thread->held_monitor_count() == 0) failed: Must be